--- a/v0.8.0/genindex.html
+++ b/v0.8.0/genindex.html
@@ -74,226 +74,8 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#C"><strong>C</strong></a>
- | <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
- | <a href="#F"><strong>F</strong></a>
- | <a href="#I"><strong>I</strong></a>
- | <a href="#L"><strong>L</strong></a>
- | <a href="#N"><strong>N</strong></a>
- | <a href="#O"><strong>O</strong></a>
- | <a href="#P"><strong>P</strong></a>
- | <a href="#S"><strong>S</strong></a>
- | <a href="#T"><strong>T</strong></a>
- | <a href="#U"><strong>U</strong></a>
- | <a href="#V"><strong>V</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.__init__">__init__() (merlin.systems.dag.Ensemble method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.__init__">(merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.__init__">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.__init__">(merlin.systems.dag.ops.tensorflow.PredictTensorflow method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.__init__">(merlin.systems.dag.ops.unroll_features.UnrollFeatures method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.__init__">(merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="C">C</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.compute_input_schema">compute_input_schema() (merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.compute_input_schema">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.compute_input_schema">(merlin.systems.dag.ops.tensorflow.PredictTensorflow method)</a>
-</li>
-      </ul></li>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.compute_output_schema">compute_output_schema() (merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.compute_output_schema">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.compute_output_schema">(merlin.systems.dag.ops.tensorflow.PredictTensorflow method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.compute_output_schema">(merlin.systems.dag.ops.unroll_features.UnrollFeatures method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.compute_output_schema">(merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="D">D</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.dependencies">dependencies() (merlin.systems.dag.ops.session_filter.FilterCandidates property)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.dependencies">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling property)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.dependencies">(merlin.systems.dag.ops.unroll_features.UnrollFeatures property)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble">Ensemble (class in merlin.systems.dag)</a>
-</li>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.export">export() (merlin.systems.dag.Ensemble method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.export">(merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.export">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.export">(merlin.systems.dag.ops.unroll_features.UnrollFeatures method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.export">(merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.export_name">export_name() (merlin.systems.dag.ops.tensorflow.PredictTensorflow property)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.export_name">(merlin.systems.dag.ops.workflow.TransformWorkflow property)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="F">F</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates">FilterCandidates (class in merlin.systems.dag.ops.session_filter)</a>
-</li>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.from_config">from_config() (merlin.systems.dag.ops.session_filter.FilterCandidates class method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.from_config">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling class method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.from_config">(merlin.systems.dag.ops.unroll_features.UnrollFeatures class method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.from_config">(merlin.systems.dag.ops.workflow.TransformWorkflow class method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.from_path">from_path() (merlin.systems.dag.ops.tensorflow.PredictTensorflow class method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="I">I</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.input_schema">input_schema() (merlin.systems.dag.Ensemble property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="L">L</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.load">load() (merlin.systems.dag.Ensemble class method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.nvt_model_name">nvt_model_name() (merlin.systems.dag.ops.workflow.TransformWorkflow property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="O">O</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.output_schema">output_schema() (merlin.systems.dag.Ensemble property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="P">P</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow">PredictTensorflow (class in merlin.systems.dag.ops.tensorflow)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="S">S</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.save">save() (merlin.systems.dag.Ensemble method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.set_nvt_model_name">set_nvt_model_name() (merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
-</li>
-      <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling">SoftmaxSampling (class in merlin.systems.dag.ops.softmax_sampling)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="T">T</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.Ensemble.html#merlin.systems.dag.Ensemble.transform">transform() (merlin.systems.dag.Ensemble method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.transform">(merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.transform">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.transform">(merlin.systems.dag.ops.tensorflow.PredictTensorflow method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.transform">(merlin.systems.dag.ops.unroll_features.UnrollFeatures method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.transform">(merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow">TransformWorkflow (class in merlin.systems.dag.ops.workflow)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="U">U</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures">UnrollFeatures (class in merlin.systems.dag.ops.unroll_features)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.validate_schemas">validate_schemas() (merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 
 
            </div>
@@ -332,6 +114,10 @@
       <dd><a href="../v0.9.0/index.html">v0.9.0</a></dd>
       <dd><a href="../v23.02.00/index.html">v23.02.00</a></dd>
       <dd><a href="../v23.04.00/index.html">v23.04.00</a></dd>
+    </dl>
+    <dl>
+      <dt>Branches</dt>
+      <dd><a href="../main/index.html">main</a></dd>
     </dl>
   </div>
 </div><script>
