--- a/v23.02.00/examples/Serving-An-Implicit-Model-With-Merlin-Systems.html
+++ b/v23.02.00/examples/Serving-An-Implicit-Model-With-Merlin-Systems.html
@@ -410,16 +410,12 @@ I0414<span class="w"> </span><span class="m">18</span>:29:50.783470<span class="
   <div class="rst-other-versions">
     <dl>
       <dt>Tags</dt>
-      <dd><a href="../../v0.6.0/index.html">v0.6.0</a></dd>
       <dd><a href="../../v0.7.0/index.html">v0.7.0</a></dd>
       <dd><a href="../../v0.8.0/index.html">v0.8.0</a></dd>
       <dd><a href="../../v0.9.0/index.html">v0.9.0</a></dd>
       <dd><a href="Serving-An-Implicit-Model-With-Merlin-Systems.html">v23.02.00</a></dd>
       <dd><a href="../../v23.04.00/index.html">v23.04.00</a></dd>
-    </dl>
-    <dl>
-      <dt>Branches</dt>
-      <dd><a href="../../main/index.html">main</a></dd>
+      <dd><a href="../../v23.05.dev0/index.html">v23.05.dev0</a></dd>
     </dl>
   </div>
 </div><script>
