--- a/v0.8.0/examples/Serving-Ranking-Models-With-Merlin-Systems.html
+++ b/v0.8.0/examples/Serving-Ranking-Models-With-Merlin-Systems.html
@@ -956,6 +956,10 @@ bytearray(b&#39;[{&quot;name&quot;:&quot;0_transformworkflow&quot;,&quot;version
       <dd><a href="../../v23.04.00/index.html">v23.04.00</a></dd>
       <dd><a href="../../v23.05.dev0/index.html">v23.05.dev0</a></dd>
     </dl>
+    <dl>
+      <dt>Branches</dt>
+      <dd><a href="../../main/index.html">main</a></dd>
+    </dl>
   </div>
 </div><script>
       jQuery(function () {
