--- a/v23.05.dev0/examples/Serving-An-XGboost-Model-With-Merlin-Systems.html
+++ b/v23.05.dev0/examples/Serving-An-XGboost-Model-With-Merlin-Systems.html
@@ -474,6 +474,10 @@ Hosting the HTTP server on port 35647 instead
       <dd><a href="../../v23.04.00/index.html">v23.04.00</a></dd>
       <dd><a href="Serving-An-XGboost-Model-With-Merlin-Systems.html">v23.05.dev0</a></dd>
     </dl>
+    <dl>
+      <dt>Branches</dt>
+      <dd><a href="../../main/index.html">main</a></dd>
+    </dl>
   </div>
 </div><script>
       jQuery(function () {
