--- a/review/pr-365/_modules/merlin/systems/dag/ops/tensorflow.html
+++ b/review/pr-365/_modules/merlin/systems/dag/ops/tensorflow.html
@@ -91,6 +91,8 @@
 <span class="kn">import</span> <span class="nn">pathlib</span>
 <span class="kn">import</span> <span class="nn">tempfile</span>
 
+<span class="kn">from</span> <span class="nn">packaging</span> <span class="kn">import</span> <span class="n">version</span>
+
 <span class="c1"># this needs to be before any modules that import protobuf</span>
 <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">[</span><span class="s2">&quot;PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;python&quot;</span>
 
@@ -244,8 +246,13 @@
 
 <span class="k">def</span> <span class="nf">_build_schema_from_signature</span><span class="p">(</span><span class="n">signature</span><span class="p">):</span>
     <span class="n">schema</span> <span class="o">=</span> <span class="n">Schema</span><span class="p">()</span>
-    <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">col</span> <span class="ow">in</span> <span class="n">signature</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-        <span class="n">col_name</span> <span class="o">=</span> <span class="n">col</span><span class="o">.</span><span class="n">name</span>
+    <span class="k">for</span> <span class="n">signature_key</span><span class="p">,</span> <span class="n">tensor_spec</span> <span class="ow">in</span> <span class="n">signature</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="c1"># Selecting input name from the signature depending on tensorflow version</span>
+        <span class="c1"># This is to handle kebab-case keys in inputs</span>
+        <span class="k">if</span> <span class="n">version</span><span class="o">.</span><span class="n">parse</span><span class="p">(</span><span class="n">tf</span><span class="o">.</span><span class="n">__version__</span><span class="p">)</span> <span class="o">&lt;</span> <span class="n">version</span><span class="o">.</span><span class="n">parse</span><span class="p">(</span><span class="s2">&quot;2.12.0&quot;</span><span class="p">):</span>
+            <span class="n">col_name</span> <span class="o">=</span> <span class="n">signature_key</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">col_name</span> <span class="o">=</span> <span class="n">tensor_spec</span><span class="o">.</span><span class="n">name</span>
         <span class="k">if</span> <span class="s2">&quot;__offsets&quot;</span> <span class="ow">in</span> <span class="n">col_name</span> <span class="ow">or</span> <span class="s2">&quot;__values&quot;</span> <span class="ow">in</span> <span class="n">col_name</span><span class="p">:</span>
             <span class="n">col_name</span> <span class="o">=</span> <span class="n">col_name</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s2">&quot;__offsets&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s2">&quot;__values&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
             <span class="n">col_values_sig</span> <span class="o">=</span> <span class="n">signature</span><span class="p">[</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">col_name</span><span class="si">}</span><span class="s2">__values&quot;</span><span class="p">]</span>
@@ -253,8 +260,8 @@
             <span class="n">col_dtype</span> <span class="o">=</span> <span class="n">col_values_sig</span><span class="o">.</span><span class="n">dtype</span><span class="o">.</span><span class="n">as_numpy_dtype</span>
             <span class="n">col_dims</span> <span class="o">=</span> <span class="p">(</span><span class="n">col_offsets_sig</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="kc">None</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">col_dtype</span> <span class="o">=</span> <span class="n">col</span><span class="o">.</span><span class="n">dtype</span><span class="o">.</span><span class="n">as_numpy_dtype</span>
-            <span class="n">col_dims</span> <span class="o">=</span> <span class="n">col</span><span class="o">.</span><span class="n">shape</span>
+            <span class="n">col_dtype</span> <span class="o">=</span> <span class="n">tensor_spec</span><span class="o">.</span><span class="n">dtype</span><span class="o">.</span><span class="n">as_numpy_dtype</span>
+            <span class="n">col_dims</span> <span class="o">=</span> <span class="n">tensor_spec</span><span class="o">.</span><span class="n">shape</span>
         <span class="n">col_schema</span> <span class="o">=</span> <span class="n">ColumnSchema</span><span class="p">(</span><span class="n">col_name</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="n">col_dtype</span><span class="p">,</span> <span class="n">dims</span><span class="o">=</span><span class="n">col_dims</span><span class="p">)</span>
         <span class="n">schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="p">[</span><span class="n">col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">col_schema</span>
     <span class="k">return</span> <span class="n">schema</span>
