--- a/review/pr-370/_modules/merlin/systems/dag/ops/unroll_features.html
+++ b/review/pr-370/_modules/merlin/systems/dag/ops/unroll_features.html
@@ -91,7 +91,7 @@
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
-<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">Node</span>
+<span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">DataFormats</span><span class="p">,</span> <span class="n">Node</span>
 <span class="kn">from</span> <span class="nn">merlin.dag.selector</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">Schema</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">InferenceOperator</span>
@@ -145,7 +145,11 @@
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">unroll_cols</span><span class="o">.</span><span class="n">selector</span><span class="p">:</span>
             <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">unroll_cols</span><span class="o">.</span><span class="n">selector</span><span class="o">.</span><span class="n">names</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">unroll_cols</span><span class="o">.</span><span class="n">output_columns</span><span class="o">.</span><span class="n">names</span></div>
+            <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">unroll_cols</span><span class="o">.</span><span class="n">output_columns</span><span class="o">.</span><span class="n">names</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">supported_formats</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">DataFormats</span><span class="p">:</span>
+        <span class="k">return</span> <span class="n">DataFormats</span><span class="o">.</span><span class="n">NUMPY_TENSOR_TABLE</span> <span class="o">|</span> <span class="n">DataFormats</span><span class="o">.</span><span class="n">CUPY_TENSOR_TABLE</span></div>
 </pre></div>
 
            </div>
