--- a/review/pr-370/genindex.html
+++ b/review/pr-370/genindex.html
@@ -249,12 +249,20 @@
 </li>
       <li><a href="generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit.save_artifacts">save_artifacts() (merlin.systems.dag.ops.implicit.PredictImplicit method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.set_nvt_model_name">set_nvt_model_name() (merlin.systems.dag.ops.workflow.TransformWorkflow method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling">SoftmaxSampling (class in merlin.systems.dag.ops.softmax_sampling)</a>
 </li>
+      <li><a href="generated/merlin.systems.dag.ops.tensorflow.PredictTensorflow.html#merlin.systems.dag.ops.tensorflow.PredictTensorflow.supported_formats">supported_formats() (merlin.systems.dag.ops.tensorflow.PredictTensorflow property)</a>
+
+      <ul>
+        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.supported_formats">(merlin.systems.dag.ops.unroll_features.UnrollFeatures property)</a>
+</li>
+        <li><a href="generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.supported_formats">(merlin.systems.dag.ops.workflow.TransformWorkflow property)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
